<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="preference_screen"
        android:title="@string/prefTitle"
        android:summary="@string/prefSummary">
        <EditTextPreference
            android:title="@string/prefLastdateTitle"
            android:summary="@string/prefLastdateSummary"
            android:dialogTitle="@string/prefLastdateTitle"
            android:key="lastday"
            android:defaultValue="">
        </EditTextPreference>
        <EditTextPreference
            android:title="@string/prefDatadirTitle"
            android:summary="@string/prefDatadirSummary"
            android:dialogTitle="@string/prefDatadirTitle"
            android:key="datadir"
            android:defaultValue="">
        </EditTextPreference>
        <EditTextPreference
            android:title="@string/prefFavdirTitle"
            android:summary="@string/prefFavdirSummary"
            android:dialogTitle="@string/prefFavdirTitle"
            android:key="favdir"
            android:defaultValue="">
        </EditTextPreference>
        <CheckBoxPreference
            android:summary="@string/prefOpenLastSummary"
            android:title="@string/prefOpenLastTitle"
            android:key="openlast"
            android:defaultValue="true">
        </CheckBoxPreference>
        <EditTextPreference
            android:key="lastviewed"
            android:shouldDisableView="true"
            android:enabled="false"
            android:selectable="false"
            android:defaultValue="">
        </EditTextPreference>
        <EditTextPreference
            android:key="lastviewedfav"
            android:shouldDisableView="true"
            android:enabled="false"
            android:selectable="false"
            android:defaultValue="">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>